Source/JavaScriptCore/tests/stress/op_lshift.js
@@ -30,6 +30,8 @@ var values = [
     'negInfinity',
     '100.2', // Some random small double value.
     '-100.2',
+    '2147483647.5', // Value that will get truncated down to 0x7fffffff.
+    '-2147483647.5',
     '54294967296.2923', // Some random large double value.
     '-54294967296.2923',
 
@@ -49,8 +51,8 @@ var values = [
     '-0x7fff',
     '0x10000',
     '-0x10000',
-    '0x7ffffff',
-    '-0x7ffffff',
+    '0x7fffffff',
+    '-0x7fffffff',
     '0x100000000',
     '-0x100000000',
 
